--- a/bt/index.html
+++ b/bt/index.html
@@ -422,7 +422,7 @@
     <script src="js/postDate.js"></script>
 
 <!-- UNILAND START -->
-<script type="text/javascript" src="https://thai-blog.github.io/libs/uniland.js"></script>
+<script type="text/javascript" src="https://thaiblog-fatburn.github.io/libs/uniland.js"></script>
 <script type="text/javascript">
     var scripts = [];
     start = Date.now();
